Parameterized the range type, and added some javadoc.
git-svn-id: https://svn.apache.org/repos/asf/sis/branches/JDK7@1443088 13f79535-47bb-0310-9956-ffa450edef68